--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
 Babel==2.6.0
+dj-database-url==0.5.0
 Django==2.1.8
 django-extra-views==0.11.0
 django-haystack==2.8.1
+django-heroku==0.3.1
 django-oscar==1.6.7
 django-phonenumber-field==2.0.1
 django-tables2==1.21.2
@@ -13,6 +15,7 @@ mock==2.0.0
 pbr==5.1.3
 phonenumbers==8.10.10
 Pillow==6.0.0
+psycopg2==2.8.2
 purl==1.5
 python-dateutil==2.8.0
 pytz==2019.1
@@ -20,3 +23,4 @@ six==1.12.0
 sorl-thumbnail==12.4.1
 text-unidecode==1.2
 Unidecode==1.0.23
+whitenoise==4.1.2
