--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ django-treebeard==4.3
 django-widget-tweaks==1.4.3
 factory-boy==2.11.1
 Faker==1.0.5
+gunicorn==19.9.0
 mock==2.0.0
 pbr==5.1.3
 phonenumbers==8.10.10
